# Consulting-Agent

./: .editorconfig  .env.example  .gitignore  .mcp.json  .pre-commit-config.yaml  ACKNOWLEDGEMENTS.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FAQ.md  FINAL-ACCEPTANCE-TEST.md  Makefile  README.md  ROADMAP.md  SECURITY.md  SUPPORT.md  package-lock.json  package.json  pyproject.toml  railway.json
apps/dashboard/backend/: Dockerfile  docker-entrypoint.sh  pyproject.toml
apps/dashboard/backend/app/: config.py  db.py  events.py  main.py  ops.py  persistence_check.py  retention.py  telemetry_bridge.py
apps/dashboard/backend/app/agents/: __init__.py  agent.py  builtin.py  errors.py  models.py  registry.py  runtime.py
apps/dashboard/backend/app/consulting/: __init__.py  artifacts.py  engine.py  errors.py  metrics.py  models.py  quality_gates.py  registry.py  serialization.py  state.py  tracking.py  workflow.py
apps/dashboard/backend/app/deliverables/: audience.py  catalog.py  errors.py  export.py  generator.py  integration.py  models.py  narrative_engine.py  presentation.py  quality.py  registry.py  section_builder.py  sections.py
apps/dashboard/backend/app/evaluation/: __init__.py  ai_evaluation.py  benchmarking.py  case_library.py  continuous_improvement.py  dashboard.py  errors.py  evaluation.py  hallucination.py  human_evaluation.py  integration.py  models.py  registry.py  regression.py  replay.py  versioning.py
apps/dashboard/backend/app/knowledge/: __init__.py  catalog.py  composition.py  errors.py  execution.py  integration.py  models.py  quality.py  registry.py  selection.py  versioning.py
apps/dashboard/backend/app/memory/: __init__.py  adapters.py  cache.py  checkpoint.py  errors.py  models.py  provider.py  registry.py  service.py
apps/dashboard/backend/app/organization/: __init__.py  allocation.py  catalog.py  collaboration.py  errors.py  governance.py  integration.py  metrics.py  models.py  raci.py  registry.py  review.py
apps/dashboard/backend/tests/: conftest.py  test_agent_builtin.py  test_agent_registry.py  test_agent_runtime.py  test_api.py  test_consulting_architecture_compliance.py  test_consulting_artifacts.py  test_consulting_engine.py  test_consulting_intelligence.py  test_consulting_metrics.py  test_consulting_models.py  test_consulting_quality_gates.py  test_consulting_registry.py  test_consulting_state.py  test_consulting_tracking.py  test_container.py  test_deliverables_architecture_compliance.py  test_deliverables_audience.py  test_deliverables_catalog.py  test_deliverables_export.py  test_deliverables_generator.py  test_deliverables_integration.py  test_deliverables_models.py  test_deliverables_narrative_engine.py  test_deliverables_presentation.py  test_deliverables_quality.py  test_deliverables_registry.py  test_deliverables_sections.py  test_dispatcher.py  test_evaluation_ai.py  test_evaluation_architecture_compliance.py  test_evaluation_benchmarking.py  test_evaluation_case_library.py  test_evaluation_continuous_improvement.py  test_evaluation_dashboard.py  test_evaluation_hallucination.py  test_evaluation_human.py  test_evaluation_integration.py  test_evaluation_models.py  test_evaluation_regression.py  (+59 more)
(+427 files in other folders)
